fix: ppt expand button too big

--- a/stylesheets/commons/Prizepooltable.less
+++ b/stylesheets/commons/Prizepooltable.less
@@ -299,7 +299,7 @@ Author: Rathoz
 	display: contents;
 }
 
-:not( .ppt-toggle-expand ) .csstable-widget-cell {
+.csstable-widget-cell {
 	border-left: 1px solid var( --table-border-color, #bbbbbb );
 	border-top: 1px solid var( --table-border-color, #bbbbbb );
 	background: inherit;
@@ -308,13 +308,6 @@ Author: Rathoz
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
-}
-
-.ppt-toggle-expand {
-	border-left: 1px solid var( --table-border-color, #bbbbbb );
-	border-top: 1px solid var( --table-border-color, #bbbbbb );
-	padding: 4px;
-	text-align: center;
 }
 
 .ppt-toggle-expand.ppt-toggle-expand.ppt-toggle-expand.ppt-toggle-expand > * {
